Fix play button misaligned

--- a/styles/scss/application.scss
+++ b/styles/scss/application.scss
@@ -362,7 +362,7 @@ a {
           position: absolute;
           color: #dd0505;
           left: 0;
-          top: 0.075em;
+          top: 0;
           font-size: 3.8em;
           line-height: 1;
         }
